WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146344
Fix the !ENABLE(ES6_ARROWFUNCTION_SYNTAX) build after
r185989
https://bugs.webkit.org/show_bug.cgi?id=146344
Summary
Fix the !ENABLE(ES6_ARROWFUNCTION_SYNTAX) build after r185989
Csaba Osztrogonác
Reported
2015-06-26 05:13:32 PDT
SSIA
Attachments
Patch
(1.35 KB, patch)
2015-06-26 05:14 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-06-26 05:14:42 PDT
Created
attachment 255631
[details]
Patch
Yusuke Suzuki
Comment 2
2015-06-26 05:37:15 PDT
Comment on
attachment 255631
[details]
Patch LGTM
WebKit Commit Bot
Comment 3
2015-06-26 06:24:54 PDT
Comment on
attachment 255631
[details]
Patch Clearing flags on attachment: 255631 Committed
r185996
: <
http://trac.webkit.org/changeset/185996
>
WebKit Commit Bot
Comment 4
2015-06-26 06:24:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug