Fix the !ENABLE(ES6_ARROWFUNCTION_SYNTAX) build after r185989 https://bugs.webkit.org/show_bug.cgi?id=146344

Reviewed by Yusuke Suzuki.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseSourceElements):


Canonical link: https://commits.webkit.org/164429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185996 268f45cc-cd09-0410-ab3c-d52691b4dbfc